--- a/demo.w3layouts.com/demos_new/template_demo/01-04-2019/yield-demo_Free/227028991/web/index.html
+++ b/demo.w3layouts.com/demos_new/template_demo/01-04-2019/yield-demo_Free/227028991/web/index.html
@@ -277,7 +277,7 @@ RIGHT SIDEBAR TOGGLE SECTION
     <div class="headder-top d-md-flex">
       <div id="logo">
         <h1>
-          <a href="index.html">Yield</a>
+          <a href="index.html">Your Logo Here</a>
         </h1>
       </div>
       <!-- nav -->
@@ -405,7 +405,7 @@ RIGHT SIDEBAR TOGGLE SECTION
         <div class="col-lg-3 col-md-6 col-sm-6 service-wthree-grids img-one">
           <h4>
             Natural & Organic </h4>
-          <p class="mt-2">sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet eiusmod tempor incididunt</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare</p>
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 service-wthree-grids color-one">
 
@@ -419,7 +419,7 @@ RIGHT SIDEBAR TOGGLE SECTION
         <div class="col-lg-3 col-md-6 col-sm-6 p-0">
           <div class="service-wthree-grids img-four">
             <h4>Fast free delivery</h4>
-            <p class="mt-2">sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet eiusmod tempor incididunt</p>
+            <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare</p>
           </div>
           <div class="service-wthree-grids color-two">
 
@@ -433,7 +433,7 @@ RIGHT SIDEBAR TOGGLE SECTION
           </div>
           <div class="service-wthree-grids img-six">
             <h4>Best Equipment</h4>
-            <p class="mt-2">sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet eiusmod tempor incididunt</p>
+            <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare</p>
           </div>
         </div>
         <div class="col-lg-3 service-second-grid img-five">
@@ -475,7 +475,7 @@ RIGHT SIDEBAR TOGGLE SECTION
               </li>
             </ul>
           </div>
-          <p class="mt-2">sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet eiusmod tempor incididunt</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare</p>
           <h6 class="mt-3"> Sophia Miller</h6>
         </div>
         <div class="col-lg-4 col-md-4 team-w3layouts-grids text-center my-3">
@@ -504,7 +504,7 @@ RIGHT SIDEBAR TOGGLE SECTION
               </li>
             </ul>
           </div>
-          <p class="mt-2">sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet eiusmod tempor incididunt</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare</p>
           <h6 class="mt-3">Marker Sam</h6>
         </div>
         <div class="col-lg-4 col-md-4 team-w3layouts-grids text-center my-3">
@@ -533,7 +533,7 @@ RIGHT SIDEBAR TOGGLE SECTION
               </li>
             </ul>
           </div>
-          <p class="mt-2">sed do eiusmod tempor incididunt ut Lorem ipsum dolor sit amet eiusmod tempor incididunt</p>
+          <p class="mt-2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare non Lorem ipsum Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum nibh urna, euismod ut ornare</p>
           <h6 class="mt-3">Olivia Smith</h6>
         </div>
       </div>
@@ -754,13 +754,14 @@ RIGHT SIDEBAR TOGGLE SECTION
           <h3 class="title mb-lg-5 mb-md-4 mb-sm-4 mb-3 text-center">Get In Touch</h3>
           <div class=" footer-top text-center">
             <p>
-              <span>Address</span> : Melbourne St,South
-              <br>Birbane 4101 Austraila.</p>
+              <span>Address</span> : Delhi St,South
+              <br>Birbane 4101 INDIA.</p>
             <p class="pt-lg-3 pt-2">
-              <span> Phone</span> : +(000) 123 4565 32</p>
+              <span> Phone</span> : +(91) 823 456 7890</p>
             <p class="pt-lg-3 pt-2">
               <span>Email</span> :
-              <a href="mailto:info@example.com">info@example1.com</a>
+              
+              <a href="mailto:info@example.com">myknotclub@email.com</a>
             </p>
           </div>
 
@@ -818,10 +819,11 @@ RIGHT SIDEBAR TOGGLE SECTION
   <!-- copy right -->
   <footer>
     <div class="bottom-footer text-center py-md-4 py-3">
-      <p>
+      <p class="mb-0" style="color: rgba(255,255,255,.5); font-size: 13px;">Copyright &copy;<script data-cfasync="false" src="../../cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>document.write(new Date().getFullYear());</script> By <a href="http://www.myknot.club/" target="_blank" rel="nofollow noopener">MyKnot</a></p>
+      <!-- <p>
         © 2019 Yield. All Rights Reserved | Design by
         <a href="http://www.w3layouts.com/" target="_blank">W3Layouts</a>
-      </p>
+      </p> -->
     </div>
   </footer>
   <!-- copy right -->
